WebCore/plugins/win/PluginViewWin.cpp
@@ -50,6 +50,7 @@
 #include "JSDOMBinding.h"
 #include "JSDOMWindow.h"
 #include "KeyboardEvent.h"
+#include "LocalWindowsContext.h"
 #include "MIMETypeRegistry.h"
 #include "MouseEvent.h"
 #include "Page.h"
@@ -563,7 +564,7 @@ void PluginView::paintWindowedPluginIntoContext(GraphicsContext* context, const 
     ASSERT(parent()->isFrameView());
     IntPoint locationInWindow = static_cast<FrameView*>(parent())->contentsToWindow(frameRect().location());
 
-    HDC hdc = context->getWindowsContext(frameRect(), false);
+    LocalWindowsContext windowsContext(context, frameRect(), false);
 
 #if PLATFORM(CAIRO)
     // Must flush drawings up to this point to the backing metafile, otherwise the
@@ -573,6 +574,7 @@ void PluginView::paintWindowedPluginIntoContext(GraphicsContext* context, const 
     cairo_show_page(ctx);
 #endif
 
+    HDC hdc = windowsContext.hdc();
     XFORM originalTransform;
     GetWorldTransform(hdc, &originalTransform);
 
@@ -587,8 +589,6 @@ void PluginView::paintWindowedPluginIntoContext(GraphicsContext* context, const 
     paintIntoTransformedContext(hdc);
 
     SetWorldTransform(hdc, &originalTransform);
-
-    context->releaseWindowsContext(hdc, frameRect(), false);
 #endif
 }
 
@@ -617,7 +617,7 @@ void PluginView::paint(GraphicsContext* context, const IntRect& rect)
 
     ASSERT(parent()->isFrameView());
     IntRect rectInWindow = static_cast<FrameView*>(parent())->contentsToWindow(frameRect());
-    HDC hdc = context->getWindowsContext(rectInWindow, m_isTransparent);
+    LocalWindowsContext windowsContext(context, rectInWindow, m_isTransparent);
 
     // On Safari/Windows without transparency layers the GraphicsContext returns the HDC
     // of the window and the plugin expects that the passed in DC has window coordinates.
@@ -626,16 +626,14 @@ void PluginView::paint(GraphicsContext* context, const IntRect& rect)
 #if !PLATFORM(QT) && !OS(WINCE)
     if (!context->inTransparencyLayer()) {
         XFORM transform;
-        GetWorldTransform(hdc, &transform);
+        GetWorldTransform(windowsContext.hdc(), &transform);
         transform.eDx = 0;
         transform.eDy = 0;
-        SetWorldTransform(hdc, &transform);
+        SetWorldTransform(windowsContext.hdc(), &transform);
     }
 #endif
 
-    paintIntoTransformedContext(hdc);
-
-    context->releaseWindowsContext(hdc, frameRect(), m_isTransparent);
+    paintIntoTransformedContext(windowsContext.hdc());
 }
 
 void PluginView::handleKeyboardEvent(KeyboardEvent* event)
